@@ -108,7 +108,7 @@ public class ShadowWrangler implements ClassHandler {
     Class<?> shadowClass = findDirectShadowClass(clazz);
     if (shadowClass != null) {
       try {
-        Method method = shadowClass.getMethod(ShadowConstants.STATIC_INITIALIZER_METHOD_NAME);
+        Method method = shadowClass.getDeclaredMethod(ShadowConstants.STATIC_INITIALIZER_METHOD_NAME);
         if (!Modifier.isStatic(method.getModifiers())) {
           throw new RuntimeException(shadowClass.getName() + "." + method.getName() + " is not static");
         }
@@ -210,18 +210,30 @@ public class ShadowWrangler implements ClassHandler {
   }
 
   private Method findShadowMethod(ClassLoader classLoader, ShadowConfig config, String name, Class<?>[] types) {
+    Class<?> shadowClass;
     try {
-      Class<?> shadowClass = Class.forName(config.shadowClassName, false, classLoader);
-      Method method = findShadowMethodInternal(shadowClass, name, types);
-      if (method == null && config.looseSignatures) {
-        Class<?>[] genericTypes = MethodType.genericMethodType(types.length).parameterArray();
-        method = findShadowMethodInternal(shadowClass, name, genericTypes);
-      }
-
-      return method;
+      shadowClass = Class.forName(config.shadowClassName, false, classLoader);
     } catch (ClassNotFoundException e) {
       throw new IllegalStateException(e);
     }
+
+    return findShadowMethod(config, shadowClass, name, types);
+  }
+
+  private Method findShadowMethod(ShadowConfig config, Class<?> shadowClass, String name, Class<?>[] types) {
+    Method method = findShadowMethodInternal(shadowClass, name, types);
+
+    if (method == null && config.looseSignatures) {
+      Class<?>[] genericTypes = MethodType.genericMethodType(types.length).parameterArray();
+      method = findShadowMethodInternal(shadowClass, name, genericTypes);
+    }
+
+    Class<?> superclass;
+    if (method == null && config.inheritImplementationMethods && (superclass = shadowClass.getSuperclass()) != null) {
+      return findShadowMethod(config, superclass, name, types);
+    }
+
+    return method;
   }
 
   @SuppressWarnings("ReferenceEquality")
@@ -244,9 +256,10 @@ public class ShadowWrangler implements ClassHandler {
     return isAndroidSupport(invocationProfile) || invocationProfile.isDeclaredOnObject();
   }
 
-  private Method findShadowMethodInternal(Class<?> shadowClass, String methodName, Class<?>[] paramClasses) throws ClassNotFoundException {
+  private Method findShadowMethodInternal(Class<?> shadowClass, String methodName, Class<?>[] paramClasses) {
     try {
-      Method method = shadowClass.getMethod(methodName, paramClasses);
+      Method method = shadowClass.getDeclaredMethod(methodName, paramClasses);
+      method.setAccessible(true);
       Implementation implementation = getImplementationAnnotation(method);
       return matchesSdk(implementation) ? method : null;
 
@@ -360,11 +373,12 @@ public class ShadowWrangler implements ClassHandler {
 
     try {
       Class<?> shadowClass = loadClass(shadowClassName, instance.getClass().getClassLoader());
-      Object shadow = shadowClass.newInstance();
+      Object shadow = shadowClass.getDeclaredConstructor().newInstance();
       injectRealObjectOn(shadow, shadowClass, instance);
 
       return shadow;
-    } catch (InstantiationException | IllegalAccessException e) {
+    } catch (InstantiationException | IllegalAccessException | NoSuchMethodException
+        | InvocationTargetException e) {
       throw new RuntimeException("Could not instantiate shadow, missing public empty constructor.", e);
     }
   }
